# waam_cameras

./: .gitignore  CMakeLists.txt  README.md  optris.xml  package.xml
config/: waam_devices_params.yaml
launch/: node_baumer_ir_cam.launch.py
rviz/: waam_sensors_input.rviz
scripts/: launch_all.sh  record_all.sh
src/: node_baumer_ir_cam.cpp
tmux/: launch_all.yml
